# projLaunch

./: .editorconfig  .gitignore  README.md  build.bat  package-lock.json  package.json  paket.dependencies  postcss.config.js  projlaunch.slnx  tailwind.config.js  vite.config.js
.config/: dotnet-tools.json
scripts/: build-serde-probe.ps1  check-serde-probe.mjs
serde-probe-lib/: SERDE_FABLE_REPORT.md  SerdeProbe.fs  paket.references  serde-probe-lib.fsproj
src/: AppTauri.fs  AsyncOps.fs  Browser.fs  Debug.fs  Extensions.fs  Program.fs  ProjectData.fs  ReactVersion.fs  State.fs  SvgIcons.fs  Tauri.Dpi.fs  Tauri.Event.fs  Tauri.Window.fs  Tauri.fs  View.fs  _ReactVersion.js  app.fsproj  index.css  index.html  paket.references
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-test/: src-test.fsproj
